tried working more on flush functionality but its not working yet